@@ -1,5 +1,11 @@
 2001-09-22  Kevin Vandersloot <kfv101@psu.edu>
 
+	* procman.c: don't load the desktop files twice
+
+	* interface.c: fix lines needing removal so this compiles
+
+2001-09-22  Kevin Vandersloot <kfv101@psu.edu>
+
 	* load-graph.c: check to see if load-graph is not NULL in
 	load-graph[start, stop]. Do this just so it's easy to not
 	show the sys tab for testing purposes
